--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,9 +30,9 @@
   --bg4: #232528;
 
   /* text colors */
-  --text1: #707070;
-  --text2: #606060;
-  --text3: #505050;
+  --text1: #707070; /* h1 */
+  --text2: #606060; /* h2 & h3 */
+  --text3: #505050; /* text block */
   --text4: #404040;
   --text5: #303030;
 
@@ -63,7 +63,7 @@
   /* text colors */
   --text1: #404040;
   --text2: #505050;
-  --text3: #606060;
+  --text3: #606060; /* text block */
   --text4: #707070;
   --text5: #808080;
 
