--- a/src/css/files.css
+++ b/src/css/files.css
@@ -238,12 +238,42 @@
   pointer-events: none;
 }
 
-#filecontainer .blockcontainer.heading {
+#filecontainer .blockcontainer.heading1 {
+  font-size: 22px;
+  color: var(--text2);
+  margin-top: 16px;
+  letter-spacing: 0.025em;
+}
+
+#filecontainer .block.heading1:empty:before {
+  content: "Heading 1";
+  color: var(--placeholdercolor);
+  pointer-events: none;
+}
+
+#filecontainer .blockcontainer.heading2 {
+  font-size: 20px;
+  color: var(--text2);
+  letter-spacing: 0.015em;
   margin-top: 16px;
 }
 
-#filecontainer .block.heading:empty:before {
-  content: "Heading";
+#filecontainer .block.heading2:empty:before {
+  content: "Heading 2";
+  color: var(--placeholdercolor);
+  pointer-events: none;
+}
+
+#filecontainer .blockcontainer.heading3 {
+  font-size: 18px;
+  margin-top: 16px;
+  color: var(--text2);
+  letter-spacing: 0.01em;
+
+}
+
+#filecontainer .block.heading3:empty:before {
+  content: "Heading 3";
   color: var(--placeholdercolor);
   pointer-events: none;
 }
