--- a/src/css/global.css
+++ b/src/css/global.css
@@ -141,7 +141,8 @@ input[type="range"]::-webkit-slider-thumb {
 
 /* headers */
 h1 {
-  color: var(--text1);  font-size: 24px;
+  color: var(--text1);  
+  font-size: 24px;
   letter-spacing: 0.025em;
   margin-bottom: 16px;
   display: inline-block;
@@ -156,8 +157,7 @@ h2 {
   width: 100%;
 }
 
-h3,
-.block.heading {
+h3 {
   color: var(--text2);
   font-size: 18px;
   width: auto;
