--- a/src/css/files.css
+++ b/src/css/files.css
@@ -232,6 +232,10 @@
   border-radius: 6px;
 }
 
+#filecontainer .block.code *{
+  font-family: consolasfont;
+}
+
 #filecontainer .block.code:empty:before {
   content: "Code Block";
   color: var(--placeholdercolor);
